# burnxp

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  burnxp.ipynb  train.sh
.github/workflows/: release.yaml
burnxp/: Cargo.toml
burnxp-candle/: Cargo.toml
burnxp-core/: Cargo.toml
burnxp-core/src/: cli.rs  data.rs  lib.rs  main.rs  model.rs  predict.rs  train.rs
burnxp-tch/: Cargo.toml
burnxp/src/: burnxp.rs  data.rs  lib.rs  main.rs  model.rs  predict.rs  train.rs
model/: Cargo.toml
model/src/: data.rs  main.rs  train.rs
score/: Cargo.toml  build.rs
score/src/: block.rs  data.rs  indicator.rs  lib.rs  main.rs  model.rs  predict.rs  resnet.rs  train.rs
scripts/: score.sh  score_linux.sh  score_macOS.sh  score_windows.ps1  setup_linux.sh  setup_macOS.sh  setup_windows.ps1  train.sh  train_linux.sh  train_macOS.sh  train_windows.ps1
src/: main.rs  model.rs
tagger/: Cargo.toml
tagger/src/: app.rs  cmper.rs  divider.rs  event.rs  lib.rs  main.rs  matix.rs  matrix.rs  observer.rs  ordpaths.rs  picker.rs  score.rs  scorer.rs  sort.rs  state.rs  tagger.rs  terminal.rs  utils.rs
tagger/src/components/: checkbox.rs  footer.rs  histogram.rs  image.rs  input.rs  mod.rs  picker_footer.rs  quit.rs  scorer_footer.rs  tag_grid.rs  tagger_footer.rs  title.rs
