[workspace]
members = ["burnxp", "burnxp-core", "tagger"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Louis <836250617@qq.com>"]
repository = "https://github.com/kingwingfly/burnxp"
license = "MIT"

[workspace.dependencies]
burn = { git = "https://github.com/kingwingfly/burn", branch = "dev", features = [
    "train",
] }
ratatui = { version = "0.28" }
ratatui-image = { version = "1.0.5", default-features = false, features = [
    "rustix",
] }
crossterm = { version = "0.28" }
anyhow = { version = "1.0" }
image = { version = "0.25.2", default-features = false, features = [
    "jpeg",
    "png",
    "rayon",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
bincode = { version = "1.3.3" }
clap = { version = "4.5.17", features = ["derive"] }
clap_complete = "4.5.29"
mime_guess = "2.0.5"
walkdir = "2.5.0"
rand = "0.8.5"
unicode-width = "0.2.0"

[profile.dev.package.image]
opt-level = 3
