[package]
name = "burnxp-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "An image scorer by ResNet"
license = "MIT"

[dependencies]
tagger = { path = "../tagger" }
burn = { workspace = true, features = ["train"] }
serde_json = { workspace = true }
image = { workspace = true }
clap = { workspace = true, features = ["string"] }
clap_complete = { workspace = true }
resnet-burn = { git = "https://github.com/kingwingfly/models", branch = "dev", package = "resnet-burn", default-features = false }
anyhow = { workspace = true }
serde = { workspace = true }
walkdir = { workspace = true }
mime_guess = { workspace = true }
rand = { workspace = true }
imageproc = "0.25.0"
unicode-width = { workspace = true }

[features]
default = []
tch = ["burn/tch"]
candle = ["burn/candle"]
candle-cuda = ["candle", "burn/candle-cuda"]
candle-metal = ["candle", "burn/accelerate", "burn/metal"]
