[package]
name = "burnxp"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
burnxp-core = { path = "../burnxp-core", features = ["candle-metal"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
burnxp-core = { path = "../burnxp-core", features = ["candle-cuda"] }
