[package]
name = "burnxp"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
burnxp-core = { path = "../burnxp-core", features = ["tch"] }

# upper stream is not ready: 1. Candle pooling 2. CUDA 12.6
# [target.'cfg(target_os = "macos")'.dependencies]
# burnxp-core = { path = "../burnxp-core", features = ["candle-metal"] }

# [target.'cfg(not(target_os = "macos"))'.dependencies]
# burnxp-core = { path = "../burnxp-core", features = ["candle-cuda"] }
