[package]
name = "score"
version.workspace = true
edition = "2021"
description = "An image scorer by ResNet101"

[dependencies]
burn = { workspace = true, features = ["train", "tch"] }
serde_json = { workspace = true }
image = { workspace = true }
clap = { workspace = true }
resnet-burn = { git = "https://github.com/kingwingfly/models", branch = "burn0.14", package = "resnet-burn", default-features = false }
anyhow = { workspace = true }
