[package]
name = "score"
version.workspace = true
edition = "2021"
description = "An image scorer by ResNet"

[dependencies]
burn = { workspace = true, features = ["train", "tch"] }
serde_json = { workspace = true }
image = { workspace = true }
clap = { workspace = true, features = ["string"] }
resnet-burn = { git = "https://github.com/kingwingfly/models", branch = "burn0.14", package = "resnet-burn", default-features = false }
anyhow = { workspace = true }
serde = { workspace = true }
walkdir = { workspace = true }
mime_guess = { workspace = true }
