[package]
name = "tagger"
version.workspace = true
edition = "2021"
description = "A image tagger by iteractive comparisons"

[dependencies]
ratatui = { workspace = true }
crossterm = { workspace = true }
anyhow = { workspace = true }
ratatui-image = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
image = { workspace = true }
clap = { workspace = true }
walkdir = { workspace = true }
mime_guess = { workspace = true }
crossbeam = "0.8.4"
rand = "0.8.5"
