[package]
name = "tagger"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "A image tagger by iteractive comparisons"
license = "MIT"

[dependencies]
ratatui = { workspace = true, features = ["unstable-widget-ref"] }
crossterm = { workspace = true }
anyhow = { workspace = true }
ratatui-image = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
image = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
walkdir = { workspace = true }
mime_guess = { workspace = true }
crossbeam = "0.8.4"
rand = "0.8.5"
