[package]
name = "tagger"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "A image tagger by iteractive comparisons"
license = "MIT"

[dependencies]
ratatui = { workspace = true, features = ["unstable-widget-ref"] }
crossterm = { workspace = true }
anyhow = { workspace = true }
ratatui-image = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true, optional = true }
image = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
walkdir = { workspace = true }
mime_guess = { workspace = true }
rand = { workspace = true }
crossbeam = "0.8.4"
lru = "0.12.4"
# argmin-math only support nalgebra 0.32.0
nalgebra = { version = "0.32.0", default-features = false, features = ["std"] }
argmin-math = { version = "0.4.0", default-features = false, features = [
    "nalgebra_latest",
] }
argmin = { version = "0.10.0", features = ["rayon"] }
argmin-observer-slog = "0.1.0"
unicode-width = { workspace = true }

[features]
default = ["observer"]
cmper = ["dep:bincode"]
observer = []
